--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,44 @@
 {
-    "name": "bakery-backend",
-    "version": "1.0.0",
-    "main": "index.js",
-    "jest": {
-      "testEnvironment": "node"
-    },
-    "scripts": {
-      "lint": "eslint . --ext .js",
-      "lint:fix": "eslint . --ext .js --fix",
-      "test": "jest --watchAll --detectOpenHandles --setupFiles ./test/test-setup.js",
-      "start": "nodemon --exec babel-node -r ./node_modules/dotenv/config src/index.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-      "@babel/cli": "^7.8.4",
-      "@babel/core": "^7.9.6",
-      "@babel/node": "^7.8.7",
-      "@babel/preset-env": "^7.9.6",
-      "@types/jest": "^25.2.1",
-      "babel-jest": "^26.0.1",
-      "eslint": "^7.2.0",
-      "eslint-config-airbnb": "18.2.1",
-      "eslint-plugin-import": "^2.22.1",
-      "eslint-plugin-jest": "^23.10.0",
-      "eslint-plugin-jsx-a11y": "^6.4.1",
-      "eslint-plugin-react": "^7.21.5",
-      "eslint-plugin-react-hooks": "^1.7.0",
-      "eslint-restricted-globals": "^0.2.0",
-      "jest": "^26.0.1",
-      "nodemon": "^2.0.2",
-      "prettier": "2.0.5",
-      "supertest": "^4.0.2"
-    }
+  "name": "bakery-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "scripts": {
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "test": "jest --watchAll --detectOpenHandles --setupFiles ./test/test-setup.js",
+    "start": "nodemon --exec babel-node -r ./node_modules/dotenv/config src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.6",
+    "@types/jest": "^25.2.1",
+    "babel-jest": "^26.0.1",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^23.10.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-restricted-globals": "^0.2.0",
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.2",
+    "prettier": "2.0.5",
+    "supertest": "^4.0.2"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.2",
+    "morgan": "^1.10.0",
+    "winston": "^3.3.3"
   }
-  
+}
