--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
     "test": "jest --watchAll --detectOpenHandles --setupFiles ./test/test-setup.js",
+    "test:ci": "jest --ci --collectCoverage --reporters=default --detectOpenHandles --setupFiles ./test/test-setup-ci.js",
     "start": "nodemon --exec babel-node -r ./node_modules/dotenv/config src/index.js"
   },
   "keywords": [],
