--- a/.github/workflows/git-actions-demo.yml
+++ b/.github/workflows/git-actions-demo.yml
@@ -1,17 +1,39 @@
-name: GitHub Actions Demo
-on: [push]
+name: GitHub Actions Backend CI
+on:
+  push:
+    paths:
+      - 'backend/**'
+
 jobs:
-  Explore-GitHub-Actions:
+  build:
+
     runs-on: ubuntu-latest
+    env:
+      MONGO_HOST: ${{ secrets.MONGO_HOST }}
+      MONGO_LOCAL_PORT: ${{ secrets.MONGO_LOCAL_PORT }}
+      MONGO_DB: ${{ secrets.MONGO_DB }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      JWT_EXPIRE: ${{ secrets.JWT_EXPIRE }}
+
+    strategy:
+      matrix:
+        node-version: [15.x]
+        mongodb-version: ['4.4']
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          check-latest: true
+      - name: Start MongoDB v${{ matrix.mongodb-version }}
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+      - name: Install Dependencies
+        run: yarn install
+        working-directory: ./backend
+      - name: Run Tests
+        run: yarn test:ci
+        working-directory: ./backend
