--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,3 +37,10 @@ services:
         depends_on:
             database:
                 condition: service_healthy
+    api-documentation:
+        build: api-documentation
+        ports:
+            - '4000:4000'
+        volumes:
+            - /app/node_modules
+            - ./backend:/app
