adding image server to docker

--- a/api-documentation/package.json
+++ b/api-documentation/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "name": "bakery-docs",
   "version": "1.0.0",
