--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,9 +31,13 @@ services:
             - MONGO_DB=bakery2
             - JWT_SECRET=bakery-secret
             - JWT_EXPIRE=1d
+            - IMG_SERVER_BASE_URL=http://localhost:4001
+            - IMG_SERVER_STORAGE_PATH=../image-server/public/
+            - MAX_FILE_IMAGE_UPLOAD=1000000
         volumes:
             - /app/node_modules
             - ./backend:/app
+            - ./image-server/public:/app/../image-server/public
         depends_on:
             database:
                 condition: service_healthy
@@ -43,4 +47,11 @@ services:
             - '4000:4000'
         volumes:
             - /app/node_modules
-            - ./backend:/app
+            - ./api-documentation:/app
+    image-server:
+        build: image-server
+        ports:
+            - '4001:4001'
+        volumes:
+            - /app/node_modules            
+            - ./image-server/public:/app/public
