--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+  
 version: '3'
 services:
     database:
@@ -28,7 +29,7 @@ services:
             - PORT=5000
             - MONGO_LOCAL_PORT=27017
             - MONGO_HOST=database
-            - MONGO_DB=bakery2
+            - MONGO_DB=bakery
             - JWT_SECRET=bakery-secret
             - JWT_EXPIRE=1d
             - IMG_SERVER_BASE_URL=http://localhost:4001
