--- a/backend/package.json
+++ b/backend/package.json
@@ -24,17 +24,19 @@
     "@babel/preset-env": "^7.9.6",
     "@types/jest": "^25.2.1",
     "babel-jest": "^26.0.1",
-    "eslint": "^7.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^23.10.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-restricted-globals": "^0.2.0",
     "jest": "^26.0.1",
     "nodemon": "^2.0.2",
-    "prettier": "2.0.5",
+    "prettier": "^2.3.2",
     "supertest": "^4.0.2"
   },
   "dependencies": {
