--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,6 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.6.0",
-    "jest-enzyme": "^7.1.2",
-    "react-test-renderer": "^17.0.2"
+    "jest-enzyme": "^7.1.2"
   }
 }
